--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,17 @@ html,body{height:100%}
 
 
 login{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  height:100vh;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 10;
+    width: 100%;
+    opacity: 0;
+    pointer-events: none;
+    max-width: 720px;
+    background: #fff;
+    border: 2px solid #fff;
+    transform: translate(-50%, -70%);
 }
 
 body{font-family:Segoe UI,Roboto,Arial, sans-serif;background:var(--bg);margin:0;color:#222}
