--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 *{box-sizing:border-box}
 html,body{height:100%}
 
-body{font-family:Segoe UI,Roboto,Arial, sans-serif;background:url(Backgroud.jpg); background-repeat: no-repeat ; background-size:cover;  background-color: whitesmoke; }
+body{font-family:Segoe UI,Roboto,Arial, sans-serif;background:url(Backgroud.jpg); background-repeat: no-repeat ; background-size:cover; background-blend-mode: hard-light ; background-color: whitesmoke; }
 header{display:flex;justify-content:space-between;align-items:center;padding:12px 20px;background:linear-gradient(90deg,#fff, #f9fbfd);border-bottom:1px solid #e6e9ee}
 header h1{margin:0;font-size:18px}
 .hidden{display:none}
